fixed overflow issue on dropdown

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ body.taborlin {
 
 #container {
   width: 100%;
-  overflow-x: hidden;
+  /*overflow-x: hidden;*/
   background: inherit;
   position: relative;
   display: -webkit-box;
@@ -327,9 +327,11 @@ footer{
   }
   #site li a {
     display: block;
-    height: 30px;
-    padding: 22px 0 0 10px;
+    padding: 22px 0 0 6px;
     text-decoration: none;
+  }
+  #sideNav li a {
+    padding: 11px 0 11px 0;
   }
   #content header h2 {
     font-size: 28px;
